[gd_scene load_steps=4 format=3 uid="uid://brqv464oudtwk"]

[ext_resource type="Script" path="res://scripts/mine.gd" id="1_hty7k"]
[ext_resource type="Texture2D" uid="uid://cklr7ucvl21rw" path="res://assets/mbs_icp_u423/icp_u423/Buildings/warehouse_maroon_b.png" id="2_1oukr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqxuw"]
size = Vector2(88, 92)

[node name="Mine" type="Area2D" groups=["mine"]]
position = Vector2(510, 252)
script = ExtResource("1_hty7k")

[node name="Mine" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(-15, 48.5)
scale = Vector2(0.764706, 0.931624)
texture = ExtResource("2_1oukr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-30, 44)
shape = SubResource("RectangleShape2D_kqxuw")

[node name="time_for_gold" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Level" type="Label" parent="."]
visible = false
offset_left = -53.0
offset_top = -64.0
offset_right = 16.0
offset_bottom = -41.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="time_left" type="Label" parent="."]
offset_left = -40.0
offset_top = 119.0
offset_right = 21.0
offset_bottom = 142.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_time" type="Timer" parent="."]

[node name="upgrade_mine_button" type="Button" parent="."]
offset_left = -78.0
offset_top = 108.0
offset_right = -23.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 11
text = "upgrade"

[node name="remove_mine_button" type="Button" parent="."]
offset_left = 19.0
offset_top = -26.0
offset_right = 42.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 12
text = "-"

[node name="not_enough_gold" type="Label" parent="."]
visible = false
offset_left = -168.0
offset_top = -94.0
offset_right = 90.0
offset_bottom = -40.0
theme_override_font_sizes/font_size = 31
text = "Not enough gold!"

[node name="label_time" type="Timer" parent="."]
wait_time = 1.505

[connection signal="timeout" from="time_for_gold" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="upgrade_time" to="." method="_on_upgrade_time_timeout"]
[connection signal="pressed" from="upgrade_mine_button" to="." method="_on_upgrade_mine_button_pressed"]
[connection signal="pressed" from="remove_mine_button" to="." method="_on_remove_mine_button_pressed"]
